--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Car</title>
     <style>
       .scene {
         position: absolute;
         top: 50%;
         left: 50%;
       }
+
       #car {
         position: absolute;
         top: -0.5rem;
@@ -46,11 +50,11 @@
       const keysDown = {};
 
       window.addEventListener('keydown', e => {
-        keysDown[e.which] = true;
+        keysDown[e.which] = true;
       });
 
       window.addEventListener('keyup', e => {
-        keysDown[e.which] = false;
+        keysDown[e.which] = false;
       });
 
       setInterval(() => {
