--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
       body {
         overflow: hidden;
       }
+
       canvas {
         position: absolute;
         top: 0;
         left: 0;
       }
+
       .scene {
         position: absolute;
         top: 0;
@@ -26,6 +28,7 @@
         width: 8px;
         height: 16px;
         background-color: #f60;
+        border-radius: 2px;
       }
     </style>
   </head>
