--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
       const maxPower = 0.075;
       const maxBrakingPower = 0.0375;
-      const powerFactor = 0.0375;
-      const brakingFactor = 0.075;
+      const powerFactor = 0.001;
+      const brakingFactor = 0.002;
 
       const drag = 0.95;
       const angularDrag = 0.95;
@@ -252,7 +252,10 @@
 
         car.style.transform = `translate(${positionX}px, ${positionY}px) rotate(${angle * 180 / Math.PI}deg)`;
 
-        if (power > 0.0025 || brakingPower) {
+        if ((power > 0.0025) || brakingPower) {
+          if ((maxPower === power) && Math.abs(angularVelocity) < 0.001) {
+            return;
+          }
           ctx.save();
           ctx.translate(positionX - Math.cos(angle) * 4, positionY - Math.sin(angle) * 4);
           ctx.rotate(angle);
