--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="og.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@pakastin">
+    <meta name="twitter:title" content="Simple 2d car physics with JavaScript!">
+    <meta name="twitter:image" content="og.png">
     <title>Car</title>
     <style>
       body {
