--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="og.png">
+    <meta property="og:image" content="https://pakastin.github.io/car/og.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@pakastin">
     <meta name="twitter:title" content="Simple 2d car physics with JavaScript!">
-    <meta name="twitter:image" content="og.png">
+    <meta name="twitter:image" content="https://pakastin.github.io/car/og.png">
     <title>Car</title>
     <style>
       body {
