--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="twitter:creator" content="@pakastin">
     <meta name="twitter:title" content="Simple 2d car physics with JavaScript!">
     <meta name="twitter:image" content="https://pakastin.github.io/car/og.png">
-    <title>Car</title>
+    <title>Simple 2d car physics with JavaScript!</title>
     <style>
       body {
         overflow: hidden;
