--- a/index.html
+++ b/index.html
@@ -10,297 +10,14 @@
     <meta name="twitter:title" content="Simple 2d car physics with JavaScript!">
     <meta name="twitter:image" content="https://pakastin.github.io/car/og.png">
     <title>Simple 2d car physics with JavaScript!</title>
-    <style>
-      body {
-        overflow: hidden;
-      }
-
-      canvas {
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
-
-      .scene {
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
-
-      #car {
-        position: absolute;
-        top: -8px;
-        left: -4px;
-        width: 8px;
-        height: 16px;
-        background-color: #f30;
-        border-radius: 2px;
-      }
-    </style>
+    <link rel="stylesheet" href="car.css">
   </head>
   <body>
     <canvas></canvas>
     <div class="scene">
       <div id="car"></div>
     </div>
-    <script>
-      let windowWidth = window.innerWidth;
-      let windowHeight = window.innerHeight;
-  
-      const canvas = document.getElementsByTagName('canvas')[0];
-      const ctx = canvas.getContext('2d');
-
-      const car = document.getElementById('car');
-
-      const maxPower = 0.075;
-      const maxBrakingPower = 0.0375;
-      const powerFactor = 0.001;
-      const brakingFactor = 0.0005;
-
-      const drag = 0.95;
-      const angularDrag = 0.95;
-      const turnSpeed = 0.002;
-
-      let power = 0;
-      let brakingPower = 0;
-
-      let positionX = windowWidth / 2;
-      let positionY = windowHeight / 2;
-
-      let velocityX = 0;
-      let velocityY = 0;
-
-      let angle = 0;
-      let angularVelocity = 0;
-
-      const keysDown = {};
-
-      let needResize;
-      let resizing;
-
-      window.addEventListener('keydown', e => {
-        keysDown[e.which] = true;
-      });
-
-      window.addEventListener('keyup', e => {
-        keysDown[e.which] = false;
-      });
-
-      const touching = {
-        up: 0,
-        down: 0,
-        left: 0,
-        right: 0
-      };
-
-      window.addEventListener('touchstart', e => {
-        e.preventDefault();
-
-        if (touching.active) {
-          return;
-        }
-        touching.active = true;
-
-        const prevPos = {
-          x: e.touches[0].pageX,
-          y: e.touches[0].pageY
-        };
-
-        const touchmove = e => {
-          e.preventDefault();
-
-          const pos = {
-            x: e.touches[0].pageX,
-            y: e.touches[0].pageY
-          };
-
-          const diff = {
-            x: pos.x - prevPos.x,
-            y: pos.y - prevPos.y
-          };
-
-          prevPos.x = pos.x;
-          prevPos.y = pos.y;
-
-          touching.up -= diff.y / (windowHeight / 3);
-          touching.down += diff.y / (windowHeight / 3);
-          touching.left -= diff.x / (windowWidth / 3);
-          touching.right += diff.x / (windowWidth / 3);
-
-          touching.up = Math.max(0, Math.min(1, touching.up));
-          touching.down = Math.max(0, Math.min(1, touching.down));
-          touching.left = Math.max(0, Math.min(1, touching.left));
-          touching.right = Math.max(0, Math.min(1, touching.right));
-        };
-
-        const touchend = e => {
-          touching.active = false;
-          touching.up = 0;
-          touching.down = 0;
-          touching.left = 0;
-          touching.right = 0;
-
-          window.removeEventListener('touchmove', touchmove);
-          window.removeEventListener('touchend', touchend);
-        };
-
-        window.addEventListener('touchmove', touchmove);
-        window.addEventListener('touchend', touchend);
-      });
-
-      function update () {
-        if (touching.active) {
-          if (touching.up) {
-            power += powerFactor * touching.up;
-          } else {
-            power -= powerFactor;
-          }
-          if (touching.down) {
-            brakingPower += brakingFactor;
-          } else {
-            brakingPower -= brakingFactor;
-          }
-        } else {
-          if (keysDown[38]) {
-            power += powerFactor;
-          } else {
-            power -= powerFactor;
-          }
-          if (keysDown[40]) {
-            brakingPower += brakingFactor;
-          } else {
-            brakingPower -= brakingFactor;
-          }
-        }
-
-        power = Math.max(0, Math.min(maxPower, power));
-        brakingPower = Math.max(0, Math.min(maxBrakingPower, brakingPower));
-
-        const direction = power > brakingPower ? 1 : -1;
-
-        if (power > 0.0025 || brakingPower) {
-          if (touching.active) {
-            if (touching.left) {
-              angularVelocity -= direction * turnSpeed * touching.left;
-            }
-            if (touching.right) {
-              angularVelocity += direction * turnSpeed * touching.right;
-            }
-          } else {
-            if (keysDown[37]) {
-              angularVelocity -= direction * turnSpeed;
-            }
-            if (keysDown[39]) {
-              angularVelocity += direction * turnSpeed;
-            }
-          }
-        }
-
-        velocityX += Math.sin(angle) * (power - brakingPower);
-        velocityY += Math.cos(angle) * (power - brakingPower);
-
-        positionX += velocityX;
-        positionY -= velocityY;
-        velocityX *= drag;
-        velocityY *= drag;
-        angle += angularVelocity;
-        angularVelocity *= angularDrag;
-
-        if (positionX > windowWidth) {
-          positionX -= windowWidth;
-        } else if (positionX < 0) {
-          positionX += windowWidth;
-        }
-
-        if (positionY > windowHeight) {
-          positionY -= windowHeight;
-        } else if (positionY < 0) {
-          positionY += windowHeight;
-        }
-      }
-
-      let lastTime;
-      let acc = 0;
-      const step = 1 / 120;
-
-      function render (ms) {
-        if (lastTime) {
-          acc += (ms - lastTime) / 1000;
-
-          while (acc > step) {
-            update();
-
-            acc -= step;
-          }
-        }
-
-        lastTime = ms;
-        requestAnimationFrame(render);
-
-        if (needResize || resizing) {
-          needResize = false;
-          resizing = true;
-
-          const prevImage = new Image();
-          prevImage.src = canvas.toDataURL();
-
-          prevImage.onload = () => {
-            resizing = false;
-
-            canvas.width = windowWidth;
-            canvas.height = windowHeight;
-
-            ctx.fillStyle = 'rgba(64, 64, 64, 0.25)';
-
-            ctx.drawImage(prevImage, 0, 0);
-          };
-        }
-
-        car.style.transform = `translate(${positionX}px, ${positionY}px) rotate(${angle * 180 / Math.PI}deg)`;
-
-        if ((power > 0.0025) || brakingPower) {
-          if (((maxBrakingPower === brakingPower) || (maxPower === power)) && Math.abs(angularVelocity) < 0.001) {
-            return;
-          }
-          ctx.save();
-          ctx.translate(positionX - Math.cos(angle) * 4, positionY - Math.sin(angle) * 4);
-          ctx.rotate(angle);
-          ctx.translate(-positionX, -positionY);
-          ctx.fillRect(
-            positionX,
-            positionY, 
-            1, 
-            1
-          );
-          ctx.restore();
-
-          ctx.save();
-          ctx.translate(positionX - Math.cos(Math.PI + angle) * 4, positionY - Math.sin(Math.PI + angle) * 4);
-          ctx.rotate(angle);
-          ctx.translate(-positionX, -positionY);
-          ctx.fillRect(
-            positionX,
-            positionY,
-            1,
-            1
-          );
-          ctx.restore();
-        }
-      }
-
-      requestAnimationFrame(render);
-
-      function resize () {
-        windowWidth = window.innerWidth;
-        windowHeight = window.innerHeight;
-
-        needResize = true;
-      }
-
-      resize();
-
-      window.addEventListener('resize', resize);
-    </script>
+    <script src="car.js"></script>
     <a href="https://github.com/pakastin/car" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
   </body>
 </html>
