--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Multiplayer 2d car game!">
-    <meta property="og:image" content="https://car.js.org/car/og.png">
+    <meta property="og:image" content="https://car.js.org/og.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:creator" content="@pakastin">
     <meta name="twitter:title" content="Multiplayer 2d car game!">
-    <meta name="twitter:image" content="https://car.js.org/car/og.png">
+    <meta name="twitter:image" content="https://car.js.org/og.png">
     <title>Multiplayer 2d car game!</title>
     <link rel="stylesheet" href="car.css">
   </head>
