--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <canvas></canvas>
+    <div class="bullets"></div>
     <div class="scene">
       <div class="car red"></div>
     </div>
