--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <canvas></canvas>
     <div class="bullets"></div>
     <div class="scene">
-      <div class="car red"></div>
+      <div class="car"><div class="car-body red"></div><div class="car-name"></div></div>
     </div>
     <div class="buttons">
-      <button>Disconnect</button>
-      <button>Clear screen</button>
+      <button class="disconnect">Disconnect</button>
+      <button class="clearscreen">Clear screen</button>
     </div>
+    <div class="name"><div class="name-bg"></div><form><input autofocus placeholder="Nickname"><button>Play!</button></form></div>
     <div class="bottomleft">Use keyboard (up/down/left/right/space), swiping (shoot with second finger) or gamepad to drive the red car with blue cars online!</div>
     <script src="https://car.pakastin.fi/socket.io/socket.io.js"></script>
     <script src="car-controls.js"></script>
