--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <canvas></canvas>
+    <div class="points"></div>
     <div class="bullets"></div>
     <div class="scene">
       <div class="car"><div class="car-body red"></div><div class="car-name"></div></div>
