Use fixed gameboard and scrolling

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="car.css">
   </head>
   <body>
-    <canvas></canvas>
     <div class="points"></div>
-    <div class="bullets"></div>
     <div class="scene">
+      <canvas></canvas>
+      <div class="bullets"></div>
       <div class="car"><div class="car-body red"></div><div class="car-name"></div></div>
     </div>
     <div class="buttons">
@@ -24,7 +24,7 @@
       <button class="clearscreen">Clear screen</button>
     </div>
     <div class="name"><div class="name-bg"></div><form><input autofocus placeholder="Nickname" autocomplete="nickname"><button>Play!</button></form></div>
-    <div class="bottomleft">Use keyboard (up/down/left/right/space), swiping (shoot with second finger) or gamepad to drive the red car with blue cars online!</div>
+    <div class="bottomleft">Use keyboard (up/down/left/right/space), swiping (shoot with second finger) or gamepad to drive the red car with other cars online!</div>
     <script src="https://car.pakastin.fi/socket.io/socket.io.js"></script>
     <script src="car-controls.js"></script>
     <script src="car.js"></script>
