--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   </head>
   <body>
     <div class="points"></div>
-    <div class="scene">
-      <canvas></canvas>
-      <div class="bullets"></div>
-      <div class="car"><div class="car-body red"></div><div class="car-name"></div></div>
+    <div class="wrapper">
+      <div class="scene">
+        <canvas></canvas>
+        <div class="bullets"></div>
+        <div class="car"><div class="car-body red"></div><div class="car-name"></div></div>
+      </div>
     </div>
     <div class="buttons">
       <button class="disconnect">Disconnect</button>
