--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="scene">
         <canvas></canvas>
         <div class="bullets"></div>
-        <div class="car"><div class="car-body red"></div><div class="car-name"></div></div>
+        <div class="car"><div class="car-body red"><div class="car-roof"></div></div><div class="car-name"></div></div>
       </div>
     </div>
     <div class="points"></div>
