Show opponents' locations

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       <div class="scene">
         <canvas></canvas>
         <div class="bullets"></div>
-        <div class="car red"><div class="car-body"><div class="car-roof"></div></div><div class="car-name"></div></div>
+        <div class="cars">
+          <div class="car red"><div class="car-body"><div class="car-roof"></div></div><div class="car-name"></div></div>
+        </div>
+        <div class="map"></div>
       </div>
     </div>
     <div class="points"></div>
