--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <button class="disconnect">Disconnect</button>
       <button class="clearscreen">Clear screen</button>
     </div>
-    <div class="name"><div class="name-bg"></div><form><input autofocus placeholder="Nickname" autocomplete="nickname"><button>Play!</button></form></div>
+    <div class="name"><div class="name-bg"></div><form><p>Connecting...</p><input autofocus placeholder="Nickname" autocomplete="nickname"><button>Play!</button></form></div>
     <div class="bottomleft">Use keyboard (up/down/left/right/space), swiping (shoot with second finger) or gamepad to drive the red car with other cars online!</div>
     <script src="https://car.pakastin.fi/socket.io/socket.io.js"></script>
     <script src="car-controls.js"></script>
